Added clipboard.png, adjusted terms dialog,save settings issue fixed

--- a/src/sdimagegenerator.qrc
+++ b/src/sdimagegenerator.qrc
@@ -18,5 +18,6 @@
         <file>images/x-lg.png</file>
         <file>images/brush-fill.png</file>
         <file>images/palette.png</file>
+        <file>images/clipboard.png</file>
     </qresource>
 </RCC>
